--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,5 @@ before_install:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 script:
   - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.add("Graphs"); Pkg.add("Optim"); Pkg.test("TrafficAssignment")'
+after_success:
+  - julia -e 'cd(Pkg.dir("TrafficAssignment")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
