--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ before_install:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 script:
   - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.add("Graphs"); Pkg.add("Optim"); Pkg.test("TrafficAssignment")'
-  - julia -e 'Pkg.test("HttpParser", coverage=true)'
+  - julia -e 'Pkg.test("TrafficAssignment", coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("TrafficAssignment")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
