--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - sudo apt-get install libpcre3-dev julia -y
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 script:
-  - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.add("Graphs"); Pkg.add("Optim"); Pkg.test("TrafficAssignment")'
+  - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.add("LightGraphs"); Pkg.add("Optim"); Pkg.test("TrafficAssignment")'
   - julia -e 'Pkg.test("TrafficAssignment", coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("TrafficAssignment")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
