--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,8 +26,8 @@ install:
 build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
-  - C:\projects\julia\bin\julia -e -p 2 "versioninfo();
+  - C:\projects\julia\bin\julia -e "versioninfo();
       Pkg.clone(pwd(), \"TrafficAssignment\"); Pkg.build(\"TrafficAssignment\")"
 
 test_script:
-  - C:\projects\julia\bin\julia --check-bounds=yes -e "Pkg.test(\"TrafficAssignment\")"
+  - C:\projects\julia\bin\julia --check-bounds=yes -p 2 -e "Pkg.test(\"TrafficAssignment\")"
