--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os:
     - linux
     - osx
 julia:
-    - 0.6
+    - 0.7
     - nightly
 matrix:
   allow_failures:
@@ -12,7 +12,7 @@ notifications:
     email: false
 script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-    - julia -p 2 -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.add("LightGraphs"); Pkg.add("Optim"); Pkg.test("TrafficAssignment", coverage=true)'
+    - julia -p 2 -e 'using Pkg; Pkg.init(); Pkg.clone(pwd()); Pkg.add("LightGraphs"); Pkg.add("Optim"); Pkg.test("TrafficAssignment", coverage=true)'
 after_success:
     - echo $TRAVIS_JULIA_VERSION
-    - julia -e 'cd(Pkg.dir("TrafficAssignment")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+    - julia -e 'using Pkg; cd(Pkg.dir("TrafficAssignment")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
