--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
+## Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 os:
-    - linux
-    - osx
+  - linux
+  - osx
 julia:
-    - 0.7
-    - 1.0
-    - nightly
-matrix:
-  allow_failures:
-    - julia: nightly
+  - 1.0
+  - 1.1
+  - 1.2
+  - 1.3
 notifications:
-    email: false
-script:
-    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-    - julia -p 2 -e 'using Pkg; Pkg.clone(pwd()); Pkg.test("TrafficAssignment", coverage=true)'
+  email: false
+git:
+  depth: 99999999
+branches:
+  only:
+    - master
+    - /^release-.*$/
 after_success:
-    - echo $TRAVIS_JULIA_VERSION
-    - julia -e 'using Pkg; cd(Pkg.dir("TrafficAssignment")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
