--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,10 @@ repo = "https://github.com/chkwon/TrafficAssignment.jl.git"
 version = "0.5.1"
 
 [compat]
-BinDeps = "0.8-0"
+BinDeps = "0.8"
 LightGraphs = "1"
-Optim = "0.16-0"
-julia = ["0.7", "1"]
+Optim = "0.16"
+julia = "1"
 
 [deps]
 BinDeps = "9e28174c-4ba2-5203-b857-d8d62c4213ee"
