--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,20 @@
 ## Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
+
 os:
   - linux
   # - osx
+
 julia:
   - 1.0
   - 1.3
+
 notifications:
   email: false
+
+script: # the default script is equivalent to the following
+ - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+ - julia --project -e 'using Pkg; Pkg.add("DelimitedFiles"); Pkg.build(); Pkg.test(; coverage=true)';
+
 after_success:
   - julia --project -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
