--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,10 @@
 environment:
   matrix:
-  - julia_version: 1
+  # - julia_version: 1
   - julia_version: nightly
 
 platform:
-  - x86 # 32-bit
+  # - x86 # 32-bit
   - x64 # 64-bit
 
 matrix:
@@ -31,7 +31,7 @@ build_script:
 
 test_script:
   - echo "%JL_TEST_SCRIPT%"
-  - C:\julia\bin\julia -e "import Pkg; Pkg.add("DelimitedFiles"); %JL_TEST_SCRIPT%"
+  - C:\julia\bin\julia -e "using Pkg; Pkg.add(\"DelimitedFiles\"); %JL_TEST_SCRIPT%"
 
 # # Uncomment to support code coverage upload. Should only be enabled for packages
 # # which would have coverage gaps without running on Windows
