--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ julia:
 notifications:
   email: false
 
-script: # the default script is equivalent to the following
- - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - julia --project -e 'using Pkg; Pkg.add("DelimitedFiles"); Pkg.build(); Pkg.test(; coverage=true)';
+# script: # the default script is equivalent to the following
+#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+#  - julia --project -e 'using Pkg; Pkg.add("DelimitedFiles"); Pkg.build(); Pkg.test(; coverage=true)';
 
 after_success:
   - julia --project -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
