--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,8 @@ build_script:
 
 test_script:
   - echo "%JL_TEST_SCRIPT%"
-  - C:\julia\bin\julia -e "using Pkg; Pkg.add(\"DelimitedFiles\"); %JL_TEST_SCRIPT%"
+  - C:\julia\bin\julia -e "%JL_TEST_SCRIPT%"
+  # - C:\julia\bin\julia -e "using Pkg; Pkg.add(\"DelimitedFiles\"); %JL_TEST_SCRIPT%"
 
 # # Uncomment to support code coverage upload. Should only be enabled for packages
 # # which would have coverage gaps without running on Windows
