--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.5.3"
 BinDeps = "1.0"
 LightGraphs = "1.0"
 Optim = "0.20"
+DataFrames = "0.20"
 julia = "1"
 
 [deps]
@@ -16,6 +17,7 @@ Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
