--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,13 @@
 name = "TrafficAssignment"
 uuid = "735ffce8-66c7-5b61-a90f-89c46d1a79d5"
 repo = "https://github.com/chkwon/TrafficAssignment.jl.git"
-version = "0.6.0"
+version = "0.6.1"
 
 [compat]
-BinDeps = "1.0"
-LightGraphs = "1.0"
-Optim = "0.20"
-DataFrames = "0.20"
+BinDeps = "≥ 1.0"
+LightGraphs = "≥ 1.0"
+Optim = "≥ 0.20"
+DataFrames = "≥ 0.20"
 julia = "1"
 
 [deps]
