--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ language: julia
 
 os:
   - linux
-  # - osx
+  - osx
+  - windows
 
 julia:
   - 1.0
-  - 1.3
+  - 1.4
 
 notifications:
   email: false
