--- a/Project.toml
+++ b/Project.toml
@@ -7,26 +7,36 @@ version = "0.6.4"
 BinDeps = "9e28174c-4ba2-5203-b857-d8d62c4213ee"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
+Aqua = "0.8.11"
 BinDeps = "1"
-DataFrames = "0.20, 0.21, 0.22"
-LightGraphs = "1"
-Optim = "0.20, 0.21, 1.2"
+DataFrames = "1.7"
+DelimitedFiles = "1"
+Distributed = "1"
+Graphs = "1.12.1"
+JET = "0.9"
+Libdl = "1"
+LinearAlgebra = "1"
+Optim = "1.12"
 OrderedCollections = "1.1"
-julia = "1"
+Printf = "1"
+SparseArrays = "1"
+Test = "1"
+julia = "1.10"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["DelimitedFiles", "Test"]
+test = ["Aqua", "DelimitedFiles", "JET", "Test"]
