--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.6.4"
 
 [deps]
 BinDeps = "9e28174c-4ba2-5203-b857-d8d62c4213ee"
+DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
@@ -18,6 +19,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 [compat]
 Aqua = "0.8.11"
 BinDeps = "1"
+DataDeps = "0.7.13"
 DataFrames = "1.7"
 DelimitedFiles = "1"
 Distributed = "1"
