--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "TrafficAssignment"
 uuid = "735ffce8-66c7-5b61-a90f-89c46d1a79d5"
-repo = "https://github.com/chkwon/TrafficAssignment.jl.git"
+authors = ["Changhyun Kwon"]
 version = "0.6.4"
 
 [deps]
@@ -18,11 +18,12 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 Aqua = "0.8.11"
-BinDeps = "1"
+BinDeps = "1.0.2"
 DataDeps = "0.7.13"
 DataFrames = "1.7"
 DelimitedFiles = "1"
 Distributed = "1"
+Documenter = "1.10"
 Graphs = "1.12.1"
 JET = "0.9"
 JuliaFormatter = "2.1"
@@ -38,9 +39,10 @@ julia = "1.10"
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Aqua", "DelimitedFiles", "JET", "JuliaFormatter", "Test"]
+test = ["Aqua", "DelimitedFiles", "Documenter", "JET", "JuliaFormatter", "Test"]
