Add DocStringExtensions, clean up README (#5)
* Add Documenter website

* Fix

* Fix

* Add DocStringExtensions

* DataDeps docs

* Remove dead code

* Download before docs build

* Fix

* Robust test

* Ignore index

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ BinDeps = "9e28174c-4ba2-5203-b857-d8d62c4213ee"
 DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -23,6 +24,7 @@ DataDeps = "0.7.13"
 DataFrames = "1.7"
 DelimitedFiles = "1"
 Distributed = "1"
+DocStringExtensions = "0.9.4"
 Documenter = "1.10"
 Graphs = "1.12.1"
 JET = "0.9"
@@ -42,7 +44,8 @@ DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Aqua", "DelimitedFiles", "Documenter", "JET", "JuliaFormatter", "Test"]
+test = ["Aqua", "DelimitedFiles", "Documenter", "JET", "JuliaFormatter", "LinearAlgebra", "Test"]
