--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,8 +1,11 @@
 [deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 TrafficAssignment = "735ffce8-66c7-5b61-a90f-89c46d1a79d5"
+Tyler = "e170d443-b9d6-418a-9ee8-061e966341ef"
 
 [sources]
 TrafficAssignment = {path = ".."}
